--- a/live.html
+++ b/live.html
@@ -4,10 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" type="image/png" loading="lazy" href="images\uw-favicon.png" sizes="128x128">
     <title>حصريا بشبكة المهندس نت</title>
     <style>
@@ -15,7 +13,7 @@
             font-family: "Onest", sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("webpa/bg.webp");
+            background-image: url("images/bg.png");
             background-size: cover;
             /* Optional: adjust based on your design */
             background-attachment: fixed;
@@ -26,7 +24,7 @@
         /* Media query for mobile devices */
         @media only screen and (max-width: 600px) {
             body {
-                background-image: url("webpa/bgm.webp");
+                background-image: url("images/bgm.png");
                 /* Set aspect ratio to 9:16 */
                 background-size: fixed;
             }
@@ -465,15 +463,6 @@
 
         }
     </style>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DVMMJVP33N"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-DVMMJVP33N');
-</script>
 </head>
 
 <body>
