--- a/ssc5.html
+++ b/ssc5.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600&amp;display=swap"
-        rel="stylesheet" />
+    <link rel="stylesheet" href="css/stylesheet1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
-    <link rel="icon" type="image/png" href="https://www.mxgp.com/sites/default/files/images/LOGO_OK_OK.jpg"
+    <link rel="icon" type="image/png" href="images/logo.png"
         sizes="128x128" style="border-radius: 5px;">
     <title>SSC 5</title>
     <style>
@@ -16,7 +15,7 @@
             font-family: "Onest", sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("https://ideogram.ai/api/images/direct/bonVtGiwRFGIoblRU86qtA.png");
+            background-image: url("images/bg.png");
             background-size: cover;
             /* Optional: adjust based on your design */
             background-attachment: fixed;
@@ -29,7 +28,7 @@
         /* Media query for mobile devices */
         @media only screen and (max-width: 768px) {
             body {
-                background-image: url("https://ideogram.ai/api/images/direct/k9pI9F1ZSyejot5OYVETtw.png");
+                background-image: url("images/bgm.png");
                 /* Set aspect ratio to 9:16 */
                 background-size: fixed;
                 padding: 8px;
@@ -264,13 +263,13 @@
             height: 30px;
         }
     </style>
-    <script src="https://ssl.p.jwpcdn.com/player/v/8.32.1/jwplayer.js" type="text/javascript"></script>
+    <script src="js/jwplayer.js" type="text/javascript"></script>
 </head>
 
 <body>
     <header>
-        <img alt="SSC 5" id="top-image"
-            src="https://www.gobx.com/en/assets/images/SportsPackageSection/SSC__Channel_Bugs_5HD_AW-01.png" />
+        <img alt="ssc 5" id="top-image"
+            src="images/ssc5-icon.png" />
     </header>
 
     <div id="container">
@@ -282,56 +281,54 @@
                     file: "https://ssc-5-enc.edgenextcdn.net/out/v1/99289eac5a7b4319905da595afbd792b/index.mpd",
                     aspectratio: '16:9',
                     width: '100%',
-                    image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Ssc_sports.png/1200px-Ssc_sports.png',
+                    image: 'images/ssc5.png',
                     autostart: true, // Disable autostart initially
                     captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
-                    abouttext: 'Ultrawebs(HM)',
-                    aboutlink: 'https://linktr.ee/ultrawebs',
+                    abouttext: 'kaitox-web',
+                    aboutlink: 'https://linktr.ee/kaitox-web',
                     sharing: {
-                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'https://i.imgur.com/PL7Vp6K.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
+                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
                     },
-                    "Volume": "50",
                     "mute": false,
                     type: "dash",
                     drm: {
                         "clearkey": {
                             "keyId": "c88b512b17ab4f6cb09eb0ff4a1056ed",
                             "key": "adc08ee1c20a734972a55c9aebbd1888"
-                        }
+                         }
                     }
                 });
             </script>
         </div>
 
         <h3>Disclaimer</h3>
-      <ul>
-        <li>
-          The SSC Network operates as a platform for broadcasting and
-          distributing sports content.
-        </li>
-        <li>
-          All streaming links offered originate from third-party websites
-          accessible online.
-        </li>
-        <li>Our role is to provide access to these streams.</li>
-        <li>
-          We are committed to complying with copyright laws and regulations. Any
-          unauthorized use, reproduction, or redistribution of our content is
-          strictly prohibited.
-        </li>
-        <li>
-          The content is owned by the SSC Network or its content suppliers.
-        </li>
-      </ul>
-        <div class="watermark">Created by UltraWebs(HM) &copy; 2024</div>
+        <ul>
+            <li>
+              The SSC Network operates as a platform for broadcasting and
+              distributing sports content.
+            </li>
+            <li>
+              All streaming links offered originate from third-party websites
+              accessible online.
+            </li>
+            <li>Our role is to provide access to these streams.</li>
+            <li>
+              We are committed to complying with copyright laws and regulations. Any
+              unauthorized use, reproduction, or redistribution of our content is
+              strictly prohibited.
+            </li>
+            <li>
+              The content is owned by the SSC Network or its content suppliers.
+            </li>
+          </ul>
+        <div class="watermark">Created by kaitox-web &copy; 2024</div>
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=" strict" crossorigin="anonymous"></script>
+<script src="js/jquery-3.5.1.slim.min.js"></script>
+    <footer>ssc sports &copy; 2024 | by kaitox-web</footer>
 
-    <footer>SSC &copy; 2024 | by UltraWebs</footer>
-
-    <a href="https://t.me/ultrawebs" target="_blank" class="telegram-float">
+    <a href="https://t.me/kaitox-web" target="_blank" class="telegram-float">
         <div class="telegram-icon">
             <svg viewBox="0 0 64 64">
                 <path
@@ -351,10 +348,7 @@
     // Function to prevent keyboard shortcuts
     document.onkeydown = function (e) {
         // Disable F12 key
-        if (event.keyCode == 123) {
-            return false;
-        }
-        // Disable Ctrl+Shift+I key combination
+        if (event.keyCode == 123) {Shift+I key combination
         if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
             return false;
         }
