--- a/sscex2.html
+++ b/sscex2.html
@@ -2,21 +2,20 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600&amp;display=swap"
-        rel="stylesheet" />
+    <link rel="stylesheet" href="css/stylesheet1.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
-    <link rel="icon" type="image/png" href="https://www.mxgp.com/sites/default/files/images/LOGO_OK_OK.jpg"
+    <link rel="icon" type="image/png" href="images/logo.png"
         sizes="128x128" style="border-radius: 5px;">
-    <title>SSC Extra 2</title>
+    <title>ssc extra 2</title>
     <style>
         html,
         body {
             font-family: "Onest", sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("https://ideogram.ai/api/images/direct/bonVtGiwRFGIoblRU86qtA.png");
+            background-image: url("images/bg.png");
             background-size: cover;
             /* Optional: adjust based on your design */
             background-attachment: fixed;
@@ -29,7 +28,7 @@
         /* Media query for mobile devices */
         @media only screen and (max-width: 768px) {
             body {
-                background-image: url("https://ideogram.ai/api/images/direct/k9pI9F1ZSyejot5OYVETtw.png");
+                background-image: url("images/bgm.png");
                 /* Set aspect ratio to 9:16 */
                 background-size: fixed;
                 padding: 8px;
@@ -264,13 +263,13 @@
             height: 30px;
         }
     </style>
-    <script src="https://ssl.p.jwpcdn.com/player/v/8.32.1/jwplayer.js" type="text/javascript"></script>
+    <script src="js/jwplayer.js" type="text/javascript"></script>
 </head>
 
 <body>
     <header>
-        <img alt="ssc2 extra" id="top-image"
-            src="https://www.gobx.com/en/assets/images/SSC-EXTRA-22.png" />
+        <img alt="ssc extra 2" id="top-image"
+            src="images/sscex2-icon.png" />
     </header>
 
     <div id="container">
@@ -282,22 +281,21 @@
                     file: "https://ssc-extra-2-enc.edgenextcdn.net/out/v1/8b70de2b70d447ba8a7450ba90926a2d/index.mpd",
                     aspectratio: '16:9',
                     width: '100%',
-                    image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Ssc_sports.png/1200px-Ssc_sports.png',
+                    image: 'images/sscex2.png',
                     autostart: true, // Disable autostart initially
                     captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
-                    abouttext: 'Ultrawebs(HM)',
-                    aboutlink: 'https://linktr.ee/ultrawebs',
+                    abouttext: 'kaitox-web',
+                    aboutlink: 'https://linktr.ee/kaitox-web',
                     sharing: {
-                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'https://i.imgur.com/PL7Vp6K.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
+                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
                     },
-                    "Volume": "50",
                     "mute": false,
                     type: "dash",
                     drm: {
                         "clearkey": {
                             "keyId": "4d89249bd4ca4ebc9e70443265f9507d",
                             "key": "cf074ffd2646c9c2f8513b47fa57bc30"
-                        }
+                         }
                     }
                 });
             </script>
@@ -323,15 +321,14 @@
               The content is owned by the SSC Network or its content suppliers.
             </li>
           </ul>
-        <div class="watermark">Created by UltraWebs(HM) &copy; 2024</div>
+        <div class="watermark">Created by kaitox-web &copy; 2024</div>
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=" strict" crossorigin="anonymous"></script>
+<script src="js/jquery-3.5.1.slim.min.js"></script>
+    <footer>ssc sports &copy; 2024 | by kaitox-web</footer>
 
-    <footer>Sky Sports &copy; 2024 | by UltraWebs</footer>
-
-    <a href="https://t.me/ultrawebs" target="_blank" class="telegram-float">
+    <a href="https://t.me/kaitox-web" target="_blank" class="telegram-float">
         <div class="telegram-icon">
             <svg viewBox="0 0 64 64">
                 <path
