--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="icon" type="image/png" loading="lazy" href="images\uw-favicon.png" sizes="128x128">
+    <link rel="icon" type="image/png" loading="lazy" href="images\logo.png" sizes="128x128">
     <title>حصريا بشبكة المهندس نت</title>
     <style>
         body {
@@ -533,6 +533,54 @@
             <div class="movie-info">
                 <h2>SSC Extra 3</h2>
                 <p>السعودية الرياضية اكسترا 3</p>
+            </div>
+        </div>
+		 <div class="movie-poster" onclick="window.location.href='bein1.html'">
+            <img src="webpa/bein1.webp"
+                alt="Movie Poster" loading="lazy">
+            <div class="movie-info">
+                <h2>Bein Sport 1</h2>
+                <p>بي ان سبورت 1</p>
+            </div>
+        </div>
+	        <div class="movie-poster" onclick="window.location.href='bein2.html'">
+            <img src="webpa/bein2.webp"
+                alt="Movie Poster" loading="lazy">
+            <div class="movie-info">
+                <h2>Bein Sport 2</h2>
+                <p>بي ان سبورت 2</p>
+            </div>
+        </div>
+	        <div class="movie-poster" onclick="window.location.href='bein3.html'">
+            <img src="webpa/bein3.webp"
+                alt="Movie Poster" loading="lazy">
+            <div class="movie-info">
+                <h2>Bein Sport 3</h2>
+                <p>بي ان سبورت 3</p>
+            </div>
+        </div>
+			 <div class="movie-poster" onclick="window.location.href='bein4.html'">
+            <img src="webpa/bein4.webp"
+                alt="Movie Poster" loading="lazy">
+            <div class="movie-info">
+                <h2>Bein Sport 4</h2>
+                <p>بي ان سبورت 4</p>
+            </div>
+        </div>
+	        <div class="movie-poster" onclick="window.location.href='bein5.html'">
+            <img src="webpa/bein5.webp"
+                alt="Movie Poster" loading="lazy">
+            <div class="movie-info">
+                <h2>Bein Sport 5</h2>
+                <p>بي ان سبورت 5</p>
+            </div>
+        </div>
+	        <div class="movie-poster" onclick="window.location.href='bein6.html'">
+            <img src="webpa/bein6.webp"
+                alt="Movie Poster" loading="lazy">
+            <div class="movie-info">
+                <h2>Bein Sport 6</h2>
+                <p>بي ان سبورت 6</p>
             </div>
         </div>
     </div>
