--- a/bein1.html
+++ b/bein1.html
@@ -8,7 +8,7 @@
     <meta name="referrer" content="no-referrer">
     <link rel="icon" type="image/png" href="images/logo.png"
         sizes="128x128" style="border-radius: 5px;">
-    <title>SSC 2</title>
+    <title>Bein Sports 1 HD</title>
     <style>
         html,
         body {
@@ -268,8 +268,8 @@
 
 <body>
     <header>
-        <img alt="SSC 2" id="top-image"
-            src="images/ssc2-icon.png" />
+        <img alt="Bein1" id="top-image"
+            src="images/bein1-icon.png" />
     </header>
 
     <div id="container">
@@ -278,10 +278,10 @@
             <script type="text/javascript">
                 jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
                 var playerInstance = jwplayer("player-container").setup({
-                    file: "https://ssc-2-enc.edgenextcdn.net/out/v1/a16db2ec338a445a82d9c541cc9293f9/index.mpd",
+                    file: "https://live4.beinconnect.us/YallaGoalApp/beINSports1.m3u8",
                     aspectratio: '16:9',
                     width: '100%',
-                    image: 'images/ssc2.png',
+                    image: 'images/bein1.png',
                     autostart: true, // Disable autostart initially
                     captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
                     abouttext: 'kaitox-web',
@@ -291,13 +291,8 @@
                     },
                     "Volume": "50",
                     "mute": false,
-                    type: "dash",
-                    drm: {
-                        "clearkey": {
-                            "keyId": "8bcfc55359e24bd7ad1c5560a96ddd3c",
-                            "key": "b5dcf721ab522af92a9d3bf0bd55b596"
-                         }
-                    }
+                    type: "hls",
+                   
                 });
             </script>
         </div>
@@ -305,7 +300,7 @@
         <h3>Disclaimer</h3>
         <ul>
             <li>
-              The SSC Network operates as a platform for broadcasting and
+              The Bein Network operates as a platform for broadcasting and
               distributing sports content.
             </li>
             <li>
@@ -319,7 +314,7 @@
               strictly prohibited.
             </li>
             <li>
-              The content is owned by the SSC Network or its content suppliers.
+              The content is owned by the Bein Network or its content suppliers.
             </li>
           </ul>
         <div class="watermark">Created by kaitox-web &copy; 2024</div>
@@ -327,7 +322,7 @@
 
 
 <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <footer>ssc sports &copy; 2024 | by kaitox-web</footer>
+    <footer>bein sports &copy; 2024 | by kaitox-web</footer>
 
     <a href="https://t.me/kaitox-web" target="_blank" class="telegram-float">
         <div class="telegram-icon">
@@ -349,7 +344,10 @@
     // Function to prevent keyboard shortcuts
     document.onkeydown = function (e) {
         // Disable F12 key
-        if (event.keyCode == 123) {Shift+I key combination
+        if (event.keyCode == 123) {
+            return false;
+        }
+        // Disable Ctrl+Shift+I key combination
         if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
             return false;
         }
