--- a/bein5.html
+++ b/bein5.html
@@ -274,8 +274,7 @@
 
     <div id="container">
 
-<iframe src="http://213.182.204.57:8080/84e7537e-911f-47e2-bf2f-c5a78c30e484.html" width="100%" height="480" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
-
+<iframe src="http://kaitotv.duckdns.org:8080/743fdf19-7da5-4634-9d4e-4e93f9f3b459.html" width="640" height="360" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
         <h3>Disclaimer</h3>
         <ul>
             <li>
