--- a/live.html
+++ b/live.html
@@ -467,7 +467,7 @@
 
 <body>
     <nav class="navbar">
-        <a href="http://e.com" class="navbar-brand" style="font-size: 20px">
+        <a href="http://live.com" class="navbar-brand" style="font-size: 20px">
             <strong>العودة لصفحة الشبكة</strong>
         </a>
     </nav>
@@ -588,7 +588,7 @@
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>Bein Sport Xtra 1</h2>
-                <p>بي ان سبورت اكسترا 1</p>
+                <p>بي ان سبورت 6</p>
             </div>
         </div>
 	        <div class="movie-poster" onclick="window.location.href='beinex2.html'">
@@ -596,14 +596,14 @@
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>Bein Sport Xtra 2</h2>
-                <p>بي ان سبورت اكسترا 2</p>
+                <p>بي ان سبورت 6</p>
             </div>
         </div>
     </div>
 
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; Kaito_TV</p>
+            <p>ssc & Bein sports &copy; 2025 | by AbdulGhani-Gailan(777944585)</p>
         </div>
     </footer>
 </body>
