--- a/sscex3.html
+++ b/sscex3.html
@@ -270,7 +270,11 @@
     <header>
         <img alt="ssc extra 3" id="top-image"
             src="images/sscex3-icon.png" />
-    </header>
+    <nav class="navbar">
+        <a href="http://live.com" class="navbar-brand" style="font-size: 20px">
+            <strong>العودة لصفحة الشبكة</strong>
+        </a>
+    </nav>    </header>
 
     <div id="container">
 
@@ -284,11 +288,7 @@
                     image: 'images/sscex3.png',
                     autostart: true, // Disable autostart initially
                     captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
-                    abouttext: 'kaitox-web',
-                    aboutlink: 'https://linktr.ee/kaitox-web',
-                    sharing: {
-                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
-                    },
+ 
                     "mute": false,
                     type: "dash",
                     drm: {
@@ -301,33 +301,16 @@
             </script>
         </div>
 
-        <h3>Disclaimer</h3>
-        <ul>
-            <li>
-              The SSC Network operates as a platform for broadcasting and
-              distributing sports content.
-            </li>
-            <li>
-              All streaming links offered originate from third-party websites
-              accessible online.
-            </li>
-            <li>Our role is to provide access to these streams.</li>
-            <li>
-              We are committed to complying with copyright laws and regulations. Any
-              unauthorized use, reproduction, or redistribution of our content is
-              strictly prohibited.
-            </li>
-            <li>
-              The content is owned by the SSC Network or its content suppliers.
-            </li>
-          </ul>
-        <div class="watermark">Created by kaitox-web &copy; 2024</div>
+ 
     </div>
 
 
 <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <footer>ssc sports &copy; 2024 | by kaitox-web</footer>
-
+        <footer class="footer">
+        <div class="footer-content">
+            <p>ssc & Bein sports &copy; 2025 | by AbdulGhani-Gailan(777944585)</p>
+        </div>
+    </footer>
 </body>
 <script>
     // Function to prevent right-click menu
