--- a/bein2.html
+++ b/bein2.html
@@ -270,48 +270,28 @@
     <header>
         <img alt="Bein1" id="top-image"
             src="images/bein2-icon.png" />
-    </header>
+    <nav class="navbar">
+        <a href="http://live.com" class="navbar-brand" style="font-size: 20px">
+            <strong>العودة لصفحة الشبكة</strong>
+        </a>
+    </nav>    </header>
 
     <div id="container">
 
         <iframe src="http://213.182.204.57:8080/473de941-158a-413c-bb7d-8590e4d84320.html" width="100%" height="480" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
 
-        <h3>Disclaimer</h3>
-        <ul>
-            <li>
-              The Bein Network operates as a platform for broadcasting and
-              distributing sports content.
-            </li>
-            <li>
-              All streaming links offered originate from third-party websites
-              accessible online.
-            </li>
-            <li>Our role is to provide access to these streams.</li>
-            <li>
-              We are committed to complying with copyright laws and regulations. Any
-              unauthorized use, reproduction, or redistribution of our content is
-              strictly prohibited.
-            </li>
-            <li>
-              The content is owned by the Bein Network or its content suppliers.
-            </li>
-          </ul>
-        <div class="watermark">Created by kaitox-web &copy; 2024</div>
+        
     </div>
 
 
 <script src="js/jquery-3.5.1.slim.min.js"></script>
-    <footer>bein sports &copy; 2024 | by kaitox-web</footer>
-
-    <a href="https://t.me/kaitox-web" target="_blank" class="telegram-float">
-        <div class="telegram-icon">
-            <svg viewBox="0 0 64 64">
-                <path
-                    d="M56.4,8.2l-51.2,20c-1.7,0.6-1.6,3,0.1,3.5l9.7,2.9c2.1,0.6,3.8,2.2,4.4,4.3l3.8,12.1c0.5,1.6,2.5,2.1,3.7,0.9 l5.2-5.3c0.9-0.9,2.2-1,3.2-0.3l11.5,8.4c1.6,1.2,3.9,0.3,4.3-1.7l8.7-41.8C60.4,9.1,58.4,7.4,56.4,8.2z M50,17.4L29.4,35.6 c-1.1,1-1.9,2.4-2,3.9c-0.2,1.5-2.3,1.7-2.8,0.3l-0.9-3c-0.7-2.2,0.2-4.5,2.1-5.7l23.5-14.6C49.9,16.1,50.5,16.9,50,17.4z">
-                </path>
-            </svg>
+        <footer class="footer">
+        <div class="footer-content">
+            <p>ssc & Bein sports &copy; 2025 | by AbdulGhani-Gailan(777944585)</p>
         </div>
-    </a>
+    </footer>
+
+ 
 
 </body>
 <script>
