--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="icon" type="image/png" loading="lazy" href="images\logo.png" sizes="128x128">
-    <title>Kaito_TV</title>
+    <title>KaitoTV Live</title>
     <style>
         body {
             font-family: "Onest", sans-serif;
@@ -462,12 +462,15 @@
             }
 
         }
+    .auto-style1 {
+   text-align: center;
+}
     </style>
 </head>
 
 <body>
     <nav class="navbar">
-        <a href="http://e.com" class="navbar-brand" style="font-size: 20px">
+        <a href="http://live.com" class="navbar-brand" style="font-size: 20px">
             <strong>العودة لصفحة الشبكة</strong>
         </a>
     </nav>
@@ -475,14 +478,14 @@
 
     <div class="container">
 
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/ssc1.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc1.html'">
             <img src="webpa/ssc1.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 1</h2>
                 <p>السعودية الرياضية 1</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/ssc2.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc2.html'">
             <img src="webpa/ssc2.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 2</h2>
@@ -490,28 +493,28 @@
             </div>
         </div>
 
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/ssc3.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc3.html'">
             <img src="webpa/ssc3.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 3</h2>
                 <p>السعودية الرياضية 3</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/ssc4.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc4.html'">
             <img src="webpa/ssc4.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 4</h2>
                 <p>السعودية الرياضية 4</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/ssc5.html'">
+        <div class="movie-poster" onclick="window.location.href='ssc5.html'">
             <img src="webpa/ssc5.webp" alt="Movie Poster" loading="lazy">
             <div class="movie-info">
                 <h2>SSC 5</h2>
                 <p>السعودية الرياضية 5</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/sscex1.html'">
+        <div class="movie-poster" onclick="window.location.href='sscex1.html'">
             <img src="webpa/sscex1.webp"
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
@@ -519,7 +522,7 @@
                 <p>السعودية الرياضية اكسترا 1</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/sscex2.html'">
+        <div class="movie-poster" onclick="window.location.href='sscex2.html'">
             <img src="webpa/sscex2.webp"
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
@@ -527,7 +530,7 @@
                 <p>السعودية الرياضية اكسترا 2</p>
             </div>
         </div>
-        <div class="movie-poster" onclick="window.location.href='https://kaitotv1.github.io/sscex3.html'">
+        <div class="movie-poster" onclick="window.location.href='sscex3.html'">
             <img src="webpa/sscex3.webp"
                 alt="Movie Poster" loading="lazy">
             <div class="movie-info">
@@ -583,27 +586,11 @@
                 <p>بي ان سبورت 6</p>
             </div>
         </div>
-	        <div class="movie-poster" onclick="window.location.href='beinex1.html'">
-            <img src="webpa/beinxtra1.webp"
-                alt="Movie Poster" loading="lazy">
-            <div class="movie-info">
-                <h2>Bein Sport Xtra 1</h2>
-                <p>بي ان سبورت اكسترا 1</p>
-            </div>
-        </div>
-	        <div class="movie-poster" onclick="window.location.href='beinex2.html'">
-            <img src="webpa/beinxtra2.webp"
-                alt="Movie Poster" loading="lazy">
-            <div class="movie-info">
-                <h2>Bein Sport Xtra 2</h2>
-                <p>بي ان سبورت اكسترا 2</p>
-            </div>
-        </div>
     </div>
 
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; Kaito_TV</p>
+            <p class="auto-style1">&copy; حصرياً على KaitoTV</p>
         </div>
     </footer>
 </body>
